--- a/.github/workflows/flake8_lint.yml
+++ b/.github/workflows/flake8_lint.yml
@@ -14,10 +14,13 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+      with:
+        node-version: 16
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.x
+        python-version: 3.9
+        node-version: 16
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
