--- a/tests.yml
+++ b/tests.yml
@@ -21,8 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest flake8 fastapi[all]
+        pip install pytest flake8 fastapi[all] transformers
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
 
     - name: Lint with flake8
       run: |
@@ -33,4 +34,4 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest
+        pytest .test_main.py
